[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rvc-python"
version = "0.2.0"
authors = [
  { name="daswer123", email="daswerq123@gmail.com" },
]
description = "Use RVC via console or python scripts"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "requests",
  "loguru",
  "pydub",
  "torch",
  "torchaudio",
  "ffmpeg-python",
  "soundfile",
  "omegaconf",
  "pyworld",
  "torchcrepe",
  "praat-parselmouth",
  "numpy",
  "fairseq@git+https://github.com/liyaodev/fairseq",
  "faiss-cpu==1.8.0",
  "av",
]

[project.urls]
Homepage = "https://github.com/daswer123/rvc-python"
"Bug Tracker" = "https://github.com/daswer123/rvc-python/issues"

[tool.hatch.build.targets.wheel]
only-include=["rvc_python"]

[tool.hatch.metadata]
allow-direct-references = true
