[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rvc-python-butter"
version = "0.1.0"
authors = [
  { name="daswer123", email="daswerq123@gmail.com" },
  { name="misile", email="misile@duck.com" }
]
description = "Use RVC via console or python scripts"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "requests",
  "loguru",
  "pydub",
  "torch",
  "torchaudio",
  "ffmpeg-python",
  "soundfile",
  "omegaconf",
  "pyworld",
  "torchcrepe",
  "praat-parselmouth",
  "numpy",
  "fairseq@git+https://github.com/liyaodev/fairseq", # you can specify binary wheel from https://github.com/MisileLab/fairseq-butter/releases/tag/v0.12.3.1
  "faiss-cpu==1.8.0",
  "av",
  "loguru",
  "uvicorn",
  "fastapi",
  "pydantic",
  "python-multipart",
]

[project.urls]
Homepage = "https://github.com/misilelab/rvc-python-butter"
"Bug Tracker" = "https://github.com/misilelab/rvc-python-butter/issues"

[tool.hatch.build.targets.wheel]
only-include=["rvc_python"]

[tool.hatch.metadata]
allow-direct-references = true
